# Drug-KG

./: .gitignore  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  README.md  STREAMLIT_DEPLOYMENT_PLAN.md  app.py  docker-compose.yaml  main.py  proposal.md  pyproject.toml  requirements.txt  setup.md
prompts/: safety_system_prompt.txt
scripts/: demo_query.py  import_lite.py  run_phase1.py  run_phase2.py  snapshot_schema.py
src/phase1/: __init__.py  config.py  extractors.py  io_utils.py  pipeline.py  text_utils.py
src/phase2/: __init__.py  config.py  pipeline.py  validate.py
src/phase3/: __init__.py  config.py  llm_chain.py  prompting.py  safety.py  schema_snapshot.py
